@@ -1,3 +1,9 @@
+2024-12-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mcs51/gen.c,
+	  support/regression/tests/largeoddstruct.c.in:
+	  Fix bug #3804.
+
 2024-12-31 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* doc/sdccman.lyx:
@@ -8,7 +14,7 @@
 	  support/scripts/sdcclogo_simplified_bakedtext.svg:
 	  Add logo SVGs for future use, see RFE #813.
 
-2024-12-31 Philipp Klaus Krause <philipp@colecovision.eu>
+2024-12-30 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCicode.c,
 	  support/regression/tests/bug-3799.c:
